# keccak

./: Cargo.toml  README.md
src/: lib.rs
src/circuit/: bitifyex.rs  hash.rs  mod.rs
src/native/: hash.rs
tests/: bitifyex.rs  circuit_hash.rs  hash.rs
